--- a/templates/agent/layout.html
+++ b/templates/agent/layout.html
@@ -237,6 +237,11 @@
         Referrals
       </a>
       
+      <a href="{{ url_for('agent_vendors') }}" 
+         class="ylh-nav-link {% if request.path.startswith('/agent/vendors') %}active{% endif %}">
+        Trusted Vendors
+      </a>
+      
       <a href="{{ url_for('agent_settings_profile') }}" 
          class="ylh-nav-link {% if request.path.startswith('/agent/settings') %}active{% endif %}">
         Settings
